# CURe

./: .gitignore  .secrets.baseline  ARCHITECTURE.md  CHANGELOG.md  JIRA.md  README.md  RELEASING.md  SKILL.md  chunkhound_summary.py  cure.py  cure_branding.py  cure_chunkhound.py  cure_citations.py  cure_commands.py  cure_errors.py  cure_flows.py  cure_github.py  cure_llm.py  cure_output.py  cure_runtime.py  cure_sessions.py  cure_workspaces.py  install-cure.sh  meta.py  paths.py  pyproject.toml  reviewflow.py  run.py  selftest.sh  ui.py
_doctor_chunkhound_fixture/: README.md  __init__.py  main.py
cure_pr_context/: __init__.py  corpus.py  fetcher.py  orient.py  runtime.py
cure_subsequent_review/: __init__.py  contracts.py  control_plane.py  decision.py  degraded_runtime.py  discussion_linker.py  discussion_signals.py  disposition.py  finding_identity.py  github_history.py  landmark_trace.py  llm_verifier.py  memory_store.py  prior_corpus.py  prior_findings.py  runtime.py  semantic_pipeline.py  source_truth.py
docs/: README.md
openspec/: README.md
prompts/: __init__.py  default.md  mrereview_gh_local.md  mrereview_gh_local_big.md  mrereview_gh_local_big_followup.md  mrereview_gh_local_big_plan.md  mrereview_gh_local_big_resume_plan.md  mrereview_gh_local_big_resume_step.md  mrereview_gh_local_big_resume_synth.md  mrereview_gh_local_big_step.md  mrereview_gh_local_big_synth.md  mrereview_gh_local_followup.md  mrereview_zip.md
public_release_evidence/: 2026-03-19-v0.1.0-local-artifact-smoke.md  2026-03-19-v0.1.0-publish-blocker.md  2026-03-19-v0.1.2-pypi-invalid-publisher.md  2026-03-19-v0.1.2-pypi-success.md  2026-03-22-v0.1.3-local-artifact-smoke.md  2026-03-22-v0.1.4-local-artifact-smoke.md  2026-03-29-v0.1.6-local-artifact-smoke.md  2026-03-31-v0.1.10-local-artifact-smoke.md  2026-03-31-v0.1.9-local-artifact-smoke.md  2026-03-31-v0.1.9-publish-blocker.md  2026-04-04-v0.2.0-local-artifact-smoke.md  2026-04-08-v0.3.0-local-artifact-smoke.md  2026-04-08-v0.3.1-local-artifact-smoke.md  2026-04-08-v0.3.2-local-artifact-smoke.md  2026-04-09-v0.3.3-local-artifact-smoke.md  2026-04-12-v0.3.4-local-artifact-smoke.md  2026-04-13-v0.3.5-local-artifact-smoke.md  2026-04-13-v0.3.5-pypi.md  2026-04-13-v0.3.6-local-artifact-smoke.md  2026-04-13-v0.3.6-pypi.md  2026-04-16-v0.3.7-local-artifact-smoke.md  2026-04-16-v0.3.7-pypi.md  2026-04-16-v0.3.8-local-artifact-smoke.md  2026-04-16-v0.3.8-pypi.md  2026-04-16-v0.3.9-local-artifact-smoke.md  2026-04-16-v0.3.9-pypi.md  2026-04-20-v0.4.0-local-artifact-smoke.md  (+6 more)
(+132 files in other folders)
