[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cureview"
version = "0.1.3"
description = "CURe PR review sandboxes powered by ChunkHound and configurable LLM presets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cure = "cure:console_main"

[tool.setuptools]
py-modules = ["cure", "paths", "run", "meta", "ui", "cure_errors", "cure_branding", "cure_output", "cure_sessions", "cure_runtime", "cure_llm", "cure_flows", "cure_commands", "chunkhound_summary"]
packages = ["prompts"]
include-package-data = true

[tool.setuptools.package-data]
prompts = ["*.md"]
